--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@ default: &default
   host: 127.0.0.1
   port:   3306
   username: root
-  password: root
+  password: master145
 
 development:
   <<: *default
